modificacion de la rama2

--- a/lenguajes_de_marca/codigo.html
+++ b/lenguajes_de_marca/codigo.html
@@ -27,7 +27,7 @@
 
 <p> Lugar muy acogedor, que bueno estaba el té rojo, hay muchas variedades de té también hay tila y pastelitos. Ideal para quedar con amigos </p>
 <p>Primera modificacion</p>
-
+<p>Modificacion rama2</p>
 
 
 </body>
